[gd_scene load_steps=4 format=2]

[ext_resource path="res://Code/Enemy.gd" type="Script" id=1]

[sub_resource type="CylinderShape" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.827451, 0, 1, 0.392157 )

[node name="Enemy" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="CSGBox" type="CSGBox" parent="."]
material = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_FlashTimer_timeout"]
